[B][COLOR gold]v1.8.5[/COLOR][/B]
- Fix episodes thumb appearance in Estuary
- Append only the bare minimum of metadata on sources directory
- Various modules updates

[B][COLOR gold]v1.8.3[/COLOR][/B]
- Dupes checker tweaks:
    * now using infohash for magnet links instead of url check, so hopefully no more dupes
      accross torrent providers
    * fixed bug in dupes filter (thx Gkobu)
- cfscrape update (no idea who mod'ed it, but props towards them)

[B][COLOR gold]v1.8.2[/COLOR][/B]
- Fixed autoplay & cosmetic regressions caused by previous commits
- Added more color options

[B][COLOR gold]v1.8.0[/COLOR][/B]
- Sources appearance modifications [I](only tested with the default skin)[/I] :
    * added option for different color for the extra source infos (rip type, codec, size etc)
    * added option for double-line source appearance (extra source info text gets splited)
    * added simple source view option: lacks extra source info and coloring
       (ideal for non-debrid users - free hosters do not provide reliable infos anyway)
- Corresponding colored text on color selection settings (idea taken from Seren)

[B][COLOR gold]v1.7.8[/COLOR][/B]
- Fixed orionoid scraper (thx orion team for pointing out the bug)

[B][COLOR gold]v1.7.4[/COLOR][/B]
- Fixed issue with links skipping in the background while resolveurl was trying to
    transfer un-cached torrents to the debrid service, preventing the procedure.
- Orionoid scraper updates
- Micro-updates to menus, modules, cfscrape etc

[B][COLOR gold]v1.7.0[/COLOR][/B]
- Switched default scraper package to TheOath scrapers
- Openscrapers are now an OPTIONAL installation

[B][COLOR gold]v1.6.11[/COLOR][/B]
- Fix issue where all items appear the 'Resume' dialog when resume point set to
    Trakt scrobbles. Now it only appears when the watched % is between 2 and 92.

[B][COLOR gold]v1.6.10[/COLOR][/B]
- Removed cache from the 'Continue watching' movies list, so that Trakt scrobbles can be